--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
-    "moduleResolution": "node",
+    "target": "ES2017",
+    "module": "ES2015",
+    "moduleResolution": "Node",
     "esModuleInterop": true,
     "strict": true,
     "noImplicitAny": true,
@@ -13,7 +13,9 @@
     "declarationDir": "types",
   },
   "include": [
-    "src"
+    "src",
+    "__test__",
+    "jest.config.js"
   ],
   "exclude": [
     "node_modules/**"
