chore(lint): New rules

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -38,3 +38,12 @@ rules:
   comma-dangle:
     - error
     - always-multiline
+
+  no-useless-rename: error
+  object-shorthand: error
+
+  no-multiple-empty-lines:
+    - error
+    - max: 1
+      maxBOF: 0
+      maxEOF: 0
