--- a/package.json
+++ b/package.json
@@ -29,11 +29,10 @@
     "ts-jest": "^26.4.1",
     "typescript": "^4.0.3"
   },
-  "files": [
-    "dist",
-    "types"
-  ],
-  "author": "Manuel Fernandez <manferlo81@gmail.com>",
+  "author": {
+    "name": "Manuel Fernandez",
+    "email": "manferlo81@gmail.com"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/manferlo81/bundlib-starter.git"
