--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -1,38 +1,43 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: Test and Build
 
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   build:
+    name: Test and Build ( ${{ matrix.os.name }}, Node.js v${{ matrix.node-version }} )
 
-    strategy:
-      matrix:
-        os:
-          - ubuntu-latest
-        node-version:
-          - 10.x
-          - 12.x
-          - 14.x
-
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.os.image }}
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Setup Node.js ${{ matrix.node-version }} on ${{ matrix.os }}
-        uses: actions/setup-node@v1
+      - name: Setup Node.js v${{ matrix.node-version }}
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
 
       - run: npm ci
       - run: npm test
       - run: npm run build
+
+    strategy:
+      matrix:
+        os:
+          - name: Ubuntu
+            image: ubuntu-latest
+          - name: macOS
+            image: macos-latest
+          - name: Windows
+            image: windows-latest
+        node-version:
+          - 18.x
+          - 20.x
+          - 21.x
+          - 22.x
