--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # File created using '.gitignore Generator' for Visual Studio Code: https://bit.ly/vscode-gig
-# Created by https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,linux,macos,node
-# Edit at https://www.toptal.com/developers/gitignore?templates=windows,visualstudiocode,linux,macos,node
+# Created by https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,node,macos,linux
+# Edit at https://www.toptal.com/developers/gitignore?templates=windows,visualstudiocode,node,macos,linux
 
 ### Linux ###
 *~
@@ -24,7 +24,7 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
 
 # Thumbnails
 ._*
@@ -234,7 +234,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,linux,macos,node
+# End of https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,node,macos,linux
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
