--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "ci-build": "run-s lint test build",
     "clean-build": "run-s clean ci-build",
     "prerelease": "run-s clean ci-build",
-    "release": "standard-version"
+    "release": "standard-version",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
@@ -44,6 +45,7 @@
     "core-js": "^3.39.0",
     "eslint": "^9.13.0",
     "globals": "^15.11.0",
+    "husky": "^9.1.6",
     "jest": "^29.7.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^6.0.1",
