--- a/package.json
+++ b/package.json
@@ -5,42 +5,59 @@
   "keywords": [],
   "type": "commonjs",
   "exports": {
-    "import": "./dist/lib.mjs",
-    "default": "./dist/lib.cjs"
+    "types": "./dist/types/index.d.ts",
+    "import": "./dist/esm/lib.mjs",
+    "require": "./dist/cjs/lib.cjs",
+    "default": "./dist/cjs/lib.cjs"
   },
-  "main": "./dist/lib.cjs",
-  "module": "./dist/lib.mjs",
-  "jsnext:main": "./dist/lib.mjs",
-  "browser": "./dist/lib.umd.js",
-  "types": "./dist/index.d.ts",
-  "typings": "./dist/index.d.ts",
+  "main": "./dist/cjs/lib.cjs",
+  "module": "./dist/esm/lib.mjs",
+  "jsnext:main": "./dist/esm/lib.mjs",
+  "browser": "./dist/umd/lib.umd.js",
+  "types": "./dist/types/index.d.ts",
+  "typings": "./dist/types/index.d.ts",
   "scripts": {
-    "clean:cache": "rimraf node_modules/.cache/{bundlib,jest}",
+    "clean:cache": "rimraf --glob node_modules/.cache/{bundlib,jest}",
     "clean:build": "rimraf dist coverage",
     "clean": "run-p clean:*",
-    "lint:test": "eslint __test__/**/*.ts",
-    "lint:src": "eslint src/**/*.ts",
+    "lint:test": "eslint __test__",
+    "lint:src": "eslint src",
     "lint": "run-p lint:*",
-    "build": "bundlib",
-    "dev": "bundlib -dw",
     "test": "jest --color -w 3",
-    "prerelease": "run-s clean lint test build",
-    "release": "standard-version"
+    "test:watch": "npm run test -- --watch",
+    "dev": "bundlib -dw",
+    "build": "bundlib -d",
+    "ci-build": "run-s lint test build",
+    "clean-build": "run-s clean ci-build",
+    "prerelease": "run-s clean ci-build",
+    "release": "standard-version",
+    "prepare": "husky"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.29.0",
-    "@typescript-eslint/parser": "^4.29.3",
-    "bundlib": "^0.18.4",
-    "chokidar": "^3.5.2",
-    "eslint": "^7.32.0",
-    "jest": "^27.0.6",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@eslint/js": "^9.13.0",
+    "@stylistic/eslint-plugin": "^2.10.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.8.5",
+    "bundlib": "^0.21.4",
+    "chokidar": "^4.0.1",
+    "core-js": "^3.39.0",
+    "eslint": "^9.13.0",
+    "globals": "^15.11.0",
+    "husky": "^9.1.6",
+    "jest": "^29.7.0",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.2",
-    "standard-version": "^9.3.1",
-    "ts-jest": "^27.0.5",
-    "typescript": "^4.3.5"
+    "rimraf": "^6.0.1",
+    "standard-version": "^9.5.0",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.12.2"
+  },
+  "overrides": {
+    "bundlib": {
+      "eslint": "$eslint"
+    }
   },
   "author": {
     "name": "Manuel Fernandez",
