chore: Refactor `eslint` config

--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "clean:cache": "rimraf --glob node_modules/.cache/{bundlib,jest}",
     "clean:build": "rimraf dist coverage",
     "clean": "run-p clean:*",
-    "lint:test": "eslint __test__",
     "lint:src": "eslint src",
+    "lint:test": "eslint __test__",
     "lint:config": "eslint *.config.mjs",
+    "lint-all": "eslint .",
     "lint": "run-p lint:*",
     "test": "jest --color",
     "test:watch": "jest --color --watch",
