--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "lint:src": "eslint src",
     "lint:test": "eslint __test__",
     "lint:config": "eslint *.config.mjs",
+    "lint-code": "run-p lint:*",
     "lint-all": "eslint .",
-    "lint": "run-p lint:*",
     "test": "jest --color",
     "test:watch": "jest --color --watch",
     "build": "bundlib -d",
     "dev": "bundlib -dw",
-    "ci-build": "run-s lint test build",
+    "ci-build": "run-s lint-all test build",
     "clean-build": "run-s clean ci-build",
     "prerelease": "run-s clean-build",
     "release": "standard-version",
