--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Test and Build
+name: CI
 
 on:
   push:
@@ -16,16 +16,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js v20.x
-        uses: actions/setup-node@v4
+      - name: Checkout, Setup Node.js v20.x and Install dependencies
+        uses: manferlo81/action-checkout-node-install@v0
         with:
           node-version: 20.x
-
-      - name: Install dependencies
-        run: npm ci
 
       - name: Lint
         run: npm run lint
@@ -53,16 +47,10 @@ jobs:
     needs: lint
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js v${{ matrix.node-version }}
-        uses: actions/setup-node@v4
+      - name: Checkout, Setup Node.js v${{ matrix.node-version }} and Install dependencies
+        uses: manferlo81/action-checkout-node-install@v0
         with:
           node-version: ${{ matrix.node-version }}
-
-      - name: Install dependencies
-        run: npm ci
 
       - name: Test
         run: npm test
