--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "ESNext",
     "moduleResolution": "Node10",
     "esModuleInterop": true,
+    "isolatedModules": true,
     "lib": [],
     "strict": true,
     "noImplicitReturns": true,
