chore: Improve first steps

--- a/.versionrc.json
+++ b/.versionrc.json
@@ -1,5 +1,5 @@
 {
-  "header": "# bundlib-starter changelog\n\n## Changes\n",
+  "header": "# template-bundlib changelog\n\n## Changes\n",
   "types": [
     {
       "type": "chore"
