--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,7 @@
 {
-  "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "Node10",
-    "esModuleInterop": true,
-    "isolatedModules": true,
-    "lib": [],
-    "strict": true,
-    "noImplicitReturns": true,
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "declaration": true,
-    "declarationMap": true,
-    "newLine": "lf"
-  },
+  "extends": "./tsconfig-base.json",
   "include": [
     "src",
     "__test__"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "coverage"
   ]
 }
