--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "chokidar": "^4.0.3",
     "core-js": "^3.41.0",
     "eslint": "^9.22.0",
+    "eslint-import-resolver-typescript": "^4.2.2",
+    "eslint-plugin-import-x": "^4.9.0",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
