--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "@babel/preset-env": "^7.27.1",
     "@eslint/js": "^9.32.0",
     "@stylistic/eslint-plugin": "^5.2.2",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22.15.11",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.1.0",
     "bundlib": "^0.21.4",
     "chokidar": "^4.0.3",
     "core-js": "^3.42.0",
@@ -52,12 +52,12 @@
     "eslint-plugin-import-x": "^4.16.1",
     "globals": "^16.3.0",
     "husky": "^9.1.7",
-    "jest": "^29.7.0",
+    "jest": "^30.0.5",
     "npm-run-all": "^4.1.5",
     "rimraf": "^6.0.1",
     "standard-version": "^9.5.0",
-    "ts-jest": "^29.3.2",
-    "typescript": "^5.8.3",
+    "ts-jest": "^29.4.1",
+    "typescript": "~5.8.3",
     "typescript-eslint": "^8.38.0"
   },
   "overrides": {
