--- a/package.json
+++ b/package.json
@@ -40,14 +40,14 @@
   "devDependencies": {
     "@babel/core": "^7.28.0",
     "@babel/preset-env": "^7.28.0",
-    "@eslint/js": "^9.32.0",
-    "@stylistic/eslint-plugin": "^5.2.2",
+    "@eslint/js": "^9.33.0",
+    "@stylistic/eslint-plugin": "^5.2.3",
     "@types/jest": "^30.0.0",
-    "@types/node": "^24.1.0",
+    "@types/node": "^24.3.0",
     "bundlib": "^0.21.4",
     "chokidar": "^4.0.3",
     "core-js": "^3.44.0",
-    "eslint": "^9.32.0",
+    "eslint": "^9.33.0",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import-x": "^4.16.1",
     "globals": "^16.3.0",
@@ -57,8 +57,8 @@
     "rimraf": "^6.0.1",
     "standard-version": "^9.5.0",
     "ts-jest": "^29.4.1",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.38.0"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.40.0"
   },
   "overrides": {
     "bundlib": {
