chore(deps): Update dev deps
* `@eslint/js` v9.34.0
* `@stylistic/eslint-plugin` v5.3.1
* `eslint` v9.34.0
* `jest` v30.1.3
* `typescript-eslint` v8.42.0

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
-  "extends": "./tsconfig.base.json",
   "include": [
     "src",
     "__test__"
-  ]
+  ],
+  "extends": "./tsconfig.base.json"
 }
