chore(deps): Update dev deps
* `@types/node` v24.3.1
* `bundlib` v0.21.5

--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "lint-p": "run-p lint:*",
     "test": "jest --color",
     "test:watch": "jest --color --watch",
-    "build": "bundlib -d",
-    "dev": "bundlib -dw",
+    "build": "bundlib build -d",
+    "dev": "bundlib watch -d",
     "ci-build": "run-s lint test build",
     "clean-build": "run-s clean ci-build",
     "predry-release": "run-s clean-build",
@@ -45,8 +45,8 @@
     "@eslint/js": "^9.34.0",
     "@stylistic/eslint-plugin": "^5.3.1",
     "@types/jest": "^30.0.0",
-    "@types/node": "^24.3.0",
-    "bundlib": "^0.21.4",
+    "@types/node": "^24.3.1",
+    "bundlib": "^0.21.5",
     "chokidar": "^4.0.3",
     "core-js": "^3.45.1",
     "eslint": "^9.34.0",
