chore(deps): Update dev deps
* `@babel/core` v7.28.4
* `@eslint/js` v9.35.0
* `bundlib` v0.21.7
* `eslint` v9.35.0
* `globals` v16.4.0
* `typescript-eslint` v8.43.0

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    // Module
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "Node10",
@@ -7,12 +8,15 @@
     "allowSyntheticDefaultImports": true,
     "isolatedModules": true,
     "lib": [],
+    "verbatimModuleSyntax": true,
+    // Strict
     "strict": true,
     "noImplicitReturns": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    // Others
     "declaration": true,
     "declarationMap": true,
     "newLine": "lf"
