--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "core-js": "^3.45.1",
     "eslint": "^9.36.0",
     "eslint-import-resolver-typescript": "^4.4.4",
-    "eslint-plugin-import-x": "^4.16.1",
+    "eslint-plugin-import": "^2.32.0",
     "globals": "^16.4.0",
     "husky": "^9.1.7",
     "jest": "^30.1.3",
