--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "version": "0.0.0",
   "private": true,
   "keywords": [],
   "type": "commonjs",
@@ -45,7 +44,7 @@
     "@eslint/js": "^9.36.0",
     "@stylistic/eslint-plugin": "^5.4.0",
     "@types/jest": "^30.0.0",
-    "@types/node": "^24.5.2",
+    "@types/node": "^24.6.2",
     "bundlib": "^0.21.7",
     "chokidar": "^4.0.3",
     "core-js": "^3.45.1",
@@ -54,13 +53,13 @@
     "eslint-plugin-import": "^2.32.0",
     "globals": "^16.4.0",
     "husky": "^9.1.7",
-    "jest": "^30.1.3",
+    "jest": "^30.2.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^6.0.1",
     "standard-version": "^9.5.0",
     "ts-jest": "^29.4.4",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.44.0"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.45.0"
   },
   "overrides": {
     "bundlib": {
@@ -68,7 +67,7 @@
     }
   },
   "author": {
-    "name": "Manuel Fernandez",
+    "name": "Manuel Fernández",
     "email": "manferlo81@gmail.com"
   },
   "repository": {
@@ -78,6 +77,5 @@
   "bugs": {
     "url": "https://github.com/manferlo81/template-bundlib/issues"
   },
-  "homepage": "https://github.com/manferlo81/template-bundlib#readme",
-  "license": ""
+  "homepage": "https://github.com/manferlo81/template-bundlib#readme"
 }
