--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "clean:cache": "rimraf --glob node_modules/.cache/{bundlib,jest}",
     "clean:build": "rimraf dist coverage",
     "clean": "run-p clean:*",
-    "lint": "eslint .",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
     "lint:src": "eslint src",
     "lint:test": "eslint __test__",
     "lint:config": "eslint *.config.mjs",
