chore(deps): Update dev deps
* `@babel/core` v7.28.5
* `@babel/preset-env` v7.28.5
* `@stylistic/eslint-plugin` v5.6.1
* `@types/node` v24.10.1
* `bundlib` v0.21.9
* `chokidar` v5.0.0
* `core-js` v3.47.0
* `eslint` v9.39.1
* `globals` v16.5.0
* `rimraf` v6.1.2
* `ts-jest` v29.4.5
* `typescript-eslint` v8.48.0

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,21 +1,23 @@
 {
   "compilerOptions": {
     // Module
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "Node10",
+    "target": "esnext",
+    "module": "esnext",
+    "moduleResolution": "node10",
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
     "isolatedModules": true,
-    "lib": [],
+    "allowSyntheticDefaultImports": true,
     "verbatimModuleSyntax": true,
+    "lib": [],
     // Strict
     "strict": true,
     "noImplicitReturns": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "allowUnreachableCode": false,
+    "allowUnusedLabels": false,
     "noPropertyAccessFromIndexSignature": true,
+    "noFallthroughCasesInSwitch": true,
     // Others
     "declaration": true,
     "declarationMap": true,
